[gd_scene load_steps=83 format=3 uid="uid://q5ggxlcdrid3"]

[ext_resource type="Script" uid="uid://c6k2rxl7g70cq" path="res://Player/player.gd" id="1_od3ui"]
[ext_resource type="AudioStream" uid="uid://b7fwm7xyygg8s" path="res://Player/Sounds/Death 1.wav" id="2_ac8n6"]
[ext_resource type="AudioStream" uid="uid://cfhjernq8748g" path="res://Player/Sounds/ParryTry.wav" id="2_fatyj"]
[ext_resource type="Texture2D" uid="uid://lt4yf2fw1yqg" path="res://Player/Animations/Attack0001.png" id="2_od3ui"]
[ext_resource type="Texture2D" uid="uid://cjmdb078icsyw" path="res://Player/Animations/Attack0002.png" id="3_00tjw"]
[ext_resource type="AudioStream" uid="uid://cavo32qh04amo" path="res://Player/Sounds/Death 2.wav" id="3_3bga3"]
[ext_resource type="AudioStream" uid="uid://uprasnxvpkq7" path="res://Player/Sounds/ParrySucceed.wav" id="3_32uw3"]
[ext_resource type="Texture2D" uid="uid://b6ukk8l8q31is" path="res://Player/Animations/Attack0003.png" id="4_x3vf3"]
[ext_resource type="Texture2D" uid="uid://cavg04jjh0w7i" path="res://Player/Animations/Attack0004.png" id="5_apopc"]
[ext_resource type="Texture2D" uid="uid://dhhrmsgxak2er" path="res://Player/Animations/Attack0005.png" id="6_5htga"]
[ext_resource type="AudioStream" uid="uid://g6klj8441sd" path="res://Player/Sounds/Breathy Hm.wav" id="6_lhliw"]
[ext_resource type="AudioStream" uid="uid://ms58eg48wvib" path="res://Player/Sounds/Drink.wav" id="7_11wp0"]
[ext_resource type="Texture2D" uid="uid://dlhyvbulyw28i" path="res://Player/Animations/Attack0006.png" id="7_p5o4e"]
[ext_resource type="Texture2D" uid="uid://df3gr3fhbjuh4" path="res://Player/Animations/Attack0007.png" id="8_gu6f8"]
[ext_resource type="Texture2D" uid="uid://bd1xnq7jo7j2a" path="res://Player/Animations/Smiley dead0001.png" id="9_gvnt1"]
[ext_resource type="Texture2D" uid="uid://01cy55e6tuot" path="res://Player/Animations/Smiley dead0002.png" id="10_1kmt7"]
[ext_resource type="Texture2D" uid="uid://o0qwq1i1h31w" path="res://Player/Animations/Smiley dead0003.png" id="11_c4i3b"]
[ext_resource type="Texture2D" uid="uid://dewwtfsf6gbu2" path="res://Player/Animations/Smiley dead0004.png" id="12_uvbbp"]
[ext_resource type="Texture2D" uid="uid://cbm8uxewpxhgh" path="res://Player/Animations/Smiley dead0005.png" id="13_7v2uk"]
[ext_resource type="Texture2D" uid="uid://cd58aa8vd5bw6" path="res://Player/Animations/Fall0001.png" id="14_gpjlu"]
[ext_resource type="Texture2D" uid="uid://bfb6kt20rjm16" path="res://Player/Animations/Fall0002.png" id="15_8mwp6"]
[ext_resource type="Texture2D" uid="uid://cv2yxsr3jgntv" path="res://Player/Animations/Fall0003.png" id="16_qemgg"]
[ext_resource type="Texture2D" uid="uid://ja5m2vmaa2hr" path="res://Player/Animations/Fall0004.png" id="17_8viyr"]
[ext_resource type="Texture2D" uid="uid://cpq0yroheb4np" path="res://Player/Animations/Fall0005.png" id="18_sm0op"]
[ext_resource type="Texture2D" uid="uid://c05no61jgvxoo" path="res://Player/Animations/Jump0001.png" id="19_76lrf"]
[ext_resource type="Texture2D" uid="uid://e7vyj82jeu35" path="res://Player/Animations/Hit0001.png" id="19_gvnt1"]
[ext_resource type="Texture2D" uid="uid://clwg58p48f3cv" path="res://Player/Animations/Hit0002.png" id="20_1kmt7"]
[ext_resource type="Texture2D" uid="uid://lltx68woy55m" path="res://Player/Animations/Jump0002.png" id="20_efx54"]
[ext_resource type="Texture2D" uid="uid://rtwr2edec1sr" path="res://Player/Animations/Jump0003.png" id="21_755ss"]
[ext_resource type="Texture2D" uid="uid://bsrajjeojrn8g" path="res://Player/Animations/Hit0003.png" id="21_c4i3b"]
[ext_resource type="Texture2D" uid="uid://dct75r3rsgqbc" path="res://Player/Animations/Jump0004.png" id="22_bbimk"]
[ext_resource type="Texture2D" uid="uid://by8o01sy13voc" path="res://Player/Animations/Hit0004.png" id="22_uvbbp"]
[ext_resource type="Texture2D" uid="uid://et2dd03vwp4j" path="res://Player/Animations/Hit0005.png" id="23_7v2uk"]
[ext_resource type="Texture2D" uid="uid://0mmf63s4tnou" path="res://Player/Animations/Jump0005.png" id="23_m0h3t"]
[ext_resource type="Texture2D" uid="uid://d0d4flu6ieb0y" path="res://Player/Animations/Idle0001.png" id="24_m6nl3"]
[ext_resource type="Texture2D" uid="uid://epoaajax2t12" path="res://Player/Animations/Idle0002.png" id="25_8hx1r"]
[ext_resource type="Texture2D" uid="uid://ccvylghq64hkq" path="res://Player/Animations/Idle0003.png" id="26_qas3k"]
[ext_resource type="Texture2D" uid="uid://c4d513hej3chh" path="res://Player/Animations/Idle0004.png" id="27_ntwt4"]
[ext_resource type="Texture2D" uid="uid://ctsvgylfswq8b" path="res://Player/Animations/Idle0005.png" id="28_kdg72"]
[ext_resource type="Texture2D" uid="uid://cie2rlfusiqem" path="res://Player/Animations/Parry0001.png" id="34_o5r0w"]
[ext_resource type="Texture2D" uid="uid://dhw8f23oco35p" path="res://Player/Animations/Roll0001.png" id="34_qpoj2"]
[ext_resource type="Texture2D" uid="uid://cf2em63ldr1k2" path="res://Player/Animations/Roll0002.png" id="35_3e3ym"]
[ext_resource type="Texture2D" uid="uid://br3k2ccchabm6" path="res://Player/Animations/Parry0002.png" id="35_qns6m"]
[ext_resource type="Texture2D" uid="uid://c3tbvv7qskcik" path="res://Player/Animations/Parry0003.png" id="36_fatyj"]
[ext_resource type="Texture2D" uid="uid://c8xbpmtx1ey05" path="res://Player/Animations/Roll0003.png" id="36_gxi5p"]
[ext_resource type="Texture2D" uid="uid://b25jc6u7ymmnx" path="res://Player/Animations/Parry0004.png" id="37_32uw3"]
[ext_resource type="Texture2D" uid="uid://ca4filop635a7" path="res://Player/Animations/Roll0004.png" id="37_yxu6j"]
[ext_resource type="Texture2D" uid="uid://02e48scncrfe" path="res://Player/Animations/Parry0005.png" id="38_ac8n6"]
[ext_resource type="Texture2D" uid="uid://cw84tn84dditk" path="res://Player/Animations/Roll0005.png" id="38_mdkl3"]
[ext_resource type="Texture2D" uid="uid://uyipwt7t3y1c" path="res://Player/Animations/Parry0006.png" id="39_3bga3"]
[ext_resource type="Texture2D" uid="uid://di3kn2weby3m5" path="res://Player/Animations/Roll0006.png" id="39_68syb"]
[ext_resource type="Texture2D" uid="uid://d32qypi0ywgnp" path="res://Player/Animations/Parry0007.png" id="40_lhliw"]
[ext_resource type="Texture2D" uid="uid://ch7ic3210onyk" path="res://Player/Animations/Roll0007.png" id="40_x0uyb"]
[ext_resource type="Texture2D" uid="uid://djit7a5s3r8nk" path="res://Player/Animations/Parry0008.png" id="41_11wp0"]
[ext_resource type="Texture2D" uid="uid://ckuil40hqnemn" path="res://Player/Animations/Roll0008.png" id="41_f8nak"]
[ext_resource type="Texture2D" uid="uid://rdmk2n6ajlfu" path="res://Player/Animations/Roll0009.png" id="42_pqfba"]
[ext_resource type="Texture2D" uid="uid://dvj0u1vsx6c63" path="res://Player/Animations/Run0001.png" id="43_lgaa7"]
[ext_resource type="Texture2D" uid="uid://m0x5burjb4er" path="res://Player/Animations/Run0002.png" id="44_lfyh2"]
[ext_resource type="Texture2D" uid="uid://r6tfqcoc4ujv" path="res://Player/Animations/Run0003.png" id="45_soeee"]
[ext_resource type="Texture2D" uid="uid://bfyloi86d2gq5" path="res://Player/Animations/Run0004.png" id="46_o5r0w"]
[ext_resource type="Texture2D" uid="uid://djb1qvgexq7dc" path="res://Player/Animations/Run0005.png" id="47_qns6m"]
[ext_resource type="Texture2D" uid="uid://bl8pyrfnxy73x" path="res://Player/Animations/Run0006.png" id="48_fatyj"]
[ext_resource type="Texture2D" uid="uid://c7nkjypbd3aoq" path="res://Player/Animations/Run0007.png" id="49_32uw3"]
[ext_resource type="Texture2D" uid="uid://coauymc4pikj4" path="res://Player/Animations/Run0008.png" id="50_ac8n6"]
[ext_resource type="Texture2D" uid="uid://dy6iddh6pxjfw" path="res://Player/Animations/Run0009.png" id="51_3bga3"]
[ext_resource type="Texture2D" uid="uid://dj3o6qygce1dt" path="res://Player/Animations/Use0001.png" id="52_mdkl3"]
[ext_resource type="Texture2D" uid="uid://ck5ctvttbmn84" path="res://Player/Animations/Use0002.png" id="53_68syb"]
[ext_resource type="Texture2D" uid="uid://bfnugfr7trs2e" path="res://Player/Animations/Use0003.png" id="54_x0uyb"]
[ext_resource type="Texture2D" uid="uid://n37s1133powu" path="res://Player/Animations/Use0004.png" id="55_f8nak"]
[ext_resource type="Texture2D" uid="uid://2m3t7q2lexko" path="res://Player/Animations/Use0005.png" id="56_pqfba"]
[ext_resource type="Texture2D" uid="uid://wbf3qfqn3bd7" path="res://Player/Animations/Use0006.png" id="57_lgaa7"]
[ext_resource type="Texture2D" uid="uid://cb2uunw1v3upg" path="res://Player/Animations/Use0007.png" id="58_lfyh2"]
[ext_resource type="Texture2D" uid="uid://bsj70l1yytacw" path="res://Player/Animations/Use0008.png" id="59_soeee"]
[ext_resource type="Texture2D" uid="uid://cnbmbplicqjxa" path="res://Player/Animations/Use0009.png" id="60_o5r0w"]
[ext_resource type="Texture2D" uid="uid://dltbu3eulfbgv" path="res://Player/Animations/Use0010.png" id="61_qns6m"]
[ext_resource type="Texture2D" uid="uid://bdoy566vqyhpp" path="res://Player/Animations/Use0011.png" id="62_fatyj"]
[ext_resource type="Texture2D" uid="uid://dtj3417gxb3x8" path="res://Player/Animations/Use0012.png" id="63_32uw3"]
[ext_resource type="Texture2D" uid="uid://bt6gm1llkq5ex" path="res://Player/Animations/Use0013.png" id="64_ac8n6"]
[ext_resource type="Texture2D" uid="uid://fv8li87p8ela" path="res://Player/Animations/Use0014.png" id="65_3bga3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_efx54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_od3ui")
}, {
"duration": 1.0,
"texture": ExtResource("3_00tjw")
}, {
"duration": 1.0,
"texture": ExtResource("4_x3vf3")
}, {
"duration": 1.0,
"texture": ExtResource("5_apopc")
}, {
"duration": 1.0,
"texture": ExtResource("6_5htga")
}, {
"duration": 1.0,
"texture": ExtResource("7_p5o4e")
}, {
"duration": 1.0,
"texture": ExtResource("8_gu6f8")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_gvnt1")
}, {
"duration": 1.0,
"texture": ExtResource("10_1kmt7")
}, {
"duration": 1.0,
"texture": ExtResource("11_c4i3b")
}, {
"duration": 1.0,
"texture": ExtResource("12_uvbbp")
}, {
"duration": 1.0,
"texture": ExtResource("13_7v2uk")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_gpjlu")
}, {
"duration": 1.0,
"texture": ExtResource("15_8mwp6")
}, {
"duration": 1.0,
"texture": ExtResource("16_qemgg")
}, {
"duration": 1.0,
"texture": ExtResource("17_8viyr")
}, {
"duration": 1.0,
"texture": ExtResource("18_sm0op")
}],
"loop": false,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_gvnt1")
}, {
"duration": 1.0,
"texture": ExtResource("20_1kmt7")
}, {
"duration": 1.0,
"texture": ExtResource("21_c4i3b")
}, {
"duration": 1.0,
"texture": ExtResource("22_uvbbp")
}, {
"duration": 1.0,
"texture": ExtResource("23_7v2uk")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_m6nl3")
}, {
"duration": 1.0,
"texture": ExtResource("25_8hx1r")
}, {
"duration": 1.0,
"texture": ExtResource("26_qas3k")
}, {
"duration": 1.0,
"texture": ExtResource("27_ntwt4")
}, {
"duration": 1.0,
"texture": ExtResource("28_kdg72")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_76lrf")
}, {
"duration": 1.0,
"texture": ExtResource("20_efx54")
}, {
"duration": 1.0,
"texture": ExtResource("21_755ss")
}, {
"duration": 1.0,
"texture": ExtResource("22_bbimk")
}, {
"duration": 1.0,
"texture": ExtResource("23_m0h3t")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_o5r0w")
}, {
"duration": 1.0,
"texture": ExtResource("35_qns6m")
}, {
"duration": 1.0,
"texture": ExtResource("36_fatyj")
}, {
"duration": 1.0,
"texture": ExtResource("37_32uw3")
}, {
"duration": 1.0,
"texture": ExtResource("38_ac8n6")
}, {
"duration": 1.0,
"texture": ExtResource("39_3bga3")
}, {
"duration": 1.0,
"texture": ExtResource("40_lhliw")
}, {
"duration": 1.0,
"texture": ExtResource("41_11wp0")
}],
"loop": false,
"name": &"parry",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_qpoj2")
}, {
"duration": 1.0,
"texture": ExtResource("35_3e3ym")
}, {
"duration": 1.0,
"texture": ExtResource("36_gxi5p")
}, {
"duration": 1.0,
"texture": ExtResource("37_yxu6j")
}, {
"duration": 1.0,
"texture": ExtResource("38_mdkl3")
}, {
"duration": 1.0,
"texture": ExtResource("39_68syb")
}, {
"duration": 1.0,
"texture": ExtResource("40_x0uyb")
}, {
"duration": 1.0,
"texture": ExtResource("41_f8nak")
}, {
"duration": 1.0,
"texture": ExtResource("42_pqfba")
}],
"loop": false,
"name": &"roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_lgaa7")
}, {
"duration": 1.0,
"texture": ExtResource("44_lfyh2")
}, {
"duration": 1.0,
"texture": ExtResource("45_soeee")
}, {
"duration": 1.0,
"texture": ExtResource("46_o5r0w")
}, {
"duration": 1.0,
"texture": ExtResource("47_qns6m")
}, {
"duration": 1.0,
"texture": ExtResource("48_fatyj")
}, {
"duration": 1.0,
"texture": ExtResource("49_32uw3")
}, {
"duration": 1.0,
"texture": ExtResource("50_ac8n6")
}, {
"duration": 1.0,
"texture": ExtResource("51_3bga3")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_mdkl3")
}, {
"duration": 1.0,
"texture": ExtResource("53_68syb")
}, {
"duration": 1.0,
"texture": ExtResource("54_x0uyb")
}, {
"duration": 1.0,
"texture": ExtResource("55_f8nak")
}, {
"duration": 1.0,
"texture": ExtResource("56_pqfba")
}, {
"duration": 1.0,
"texture": ExtResource("57_lgaa7")
}, {
"duration": 1.0,
"texture": ExtResource("58_lfyh2")
}, {
"duration": 1.0,
"texture": ExtResource("59_soeee")
}, {
"duration": 1.0,
"texture": ExtResource("60_o5r0w")
}, {
"duration": 1.0,
"texture": ExtResource("61_qns6m")
}, {
"duration": 1.0,
"texture": ExtResource("62_fatyj")
}, {
"duration": 1.0,
"texture": ExtResource("63_32uw3")
}, {
"duration": 1.0,
"texture": ExtResource("64_ac8n6")
}, {
"duration": 1.0,
"texture": ExtResource("65_3bga3")
}],
"loop": false,
"name": &"use",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_755ss"]
radius = 310.0
height = 976.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8h54"]
size = Vector2(523, 916.5)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_od3ui")
death_sounds = Array[AudioStream]([ExtResource("2_ac8n6"), ExtResource("3_3bga3")])
parry_try_sounds = Array[AudioStream]([ExtResource("2_fatyj")])
parry_success_sounds = Array[AudioStream]([ExtResource("3_32uw3")])
roll_sounds = Array[AudioStream]([ExtResource("6_lhliw")])
use_item_sounds = Array[AudioStream]([ExtResource("7_11wp0")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_repeat = 2
position = Vector2(120, 340)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_efx54")
animation = &"parry"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 54)
shape = SubResource("CapsuleShape2D_755ss")

[node name="AttackHitbox" type="Area2D" parent="."]
position = Vector2(39, -57)
scale = Vector2(1.08928, 1.15953)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(217.5, 62.75)
shape = SubResource("RectangleShape2D_l8h54")
disabled = true

[node name="AttackSFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="GruntSFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="MovementSFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="DamageSFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="DeathSFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ParrySFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ItemSFXPlayer" type="AudioStreamPlayer2D" parent="."]
